# Tactix

./: .gitignore  Doxyfile  README.md  Tactix.uplugin
Docs/: mainpage.md
Docs/html/: ATactixAIController_8cpp.html  ATactixAIController_8cpp__incl.map  ATactixAIController_8cpp__incl.md5  ATactixAIController_8cpp_source.html  ATactixAIController_8h.html  ATactixAIController_8h.js  ATactixAIController_8h__dep__incl.map  ATactixAIController_8h__dep__incl.md5  ATactixAIController_8h__incl.map  ATactixAIController_8h__incl.md5  ATactixAIController_8h_source.html  FTactixAgentContext_8h.html  FTactixAgentContext_8h.js  FTactixAgentContext_8h__dep__incl.map  FTactixAgentContext_8h__dep__incl.md5  FTactixAgentContext_8h__incl.map  FTactixAgentContext_8h__incl.md5  FTactixAgentContext_8h_source.html  FTactixAgentProfiler_8cpp.html  FTactixAgentProfiler_8cpp.js  FTactixAgentProfiler_8cpp__incl.map  FTactixAgentProfiler_8cpp__incl.md5  FTactixAgentProfiler_8cpp_source.html  FTactixAgentProfiler_8h.html  FTactixAgentProfiler_8h.js  FTactixAgentProfiler_8h__dep__incl.map  FTactixAgentProfiler_8h__dep__incl.md5  FTactixAgentProfiler_8h__incl.map  FTactixAgentProfiler_8h__incl.md5  FTactixAgentProfiler_8h_source.html  FTactixAgentScheduler_8cpp.html  FTactixAgentScheduler_8cpp__incl.map  FTactixAgentScheduler_8cpp__incl.md5  FTactixAgentScheduler_8cpp_source.html  FTactixAgentScheduler_8h.html  FTactixAgentScheduler_8h.js  FTactixAgentScheduler_8h__dep__incl.map  FTactixAgentScheduler_8h__dep__incl.md5  FTactixAgentScheduler_8h__incl.map  FTactixAgentScheduler_8h__incl.md5  (+1193 more)
Docs/html/search/: all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_18.js  all_19.js  all_1a.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  defines_0.js  defines_1.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  enumvalues_10.js  enumvalues_11.js  enumvalues_12.js  enumvalues_13.js  enumvalues_2.js  (+90 more)
Documentation/: mainpage.md  why-tactix.md
Source/TactixCore/: TactixCore.Build.cs
Source/TactixCore/Private/: TactixCoreModule.cpp
Source/TactixCore/Private/Agent/: FTactixAgentScheduler.cpp
Source/TactixCore/Private/Foundation/: TactixCurve.cpp
Source/TactixCore/Public/: TactixApi.h  TactixCore.h
Source/TactixCore/Public/Agent/: FTactixAgentContext.h  FTactixAgentScheduler.h  ITactixAgent.h
Source/TactixCore/Public/Blackboard/: FTactixBlackboard.h
Source/TactixCore/Public/Foundation/: TactixArena.h  TactixCurve.h  TactixEventBus.h  TactixGrid.h  TactixHandle.h  TactixMath.h  TactixPool.h
Source/TactixCore/Public/Perception/: FTactixPerceptionMemory.h  ITactixPerceptionChannel.h
Source/TactixDebug/: TactixDebug.Build.cs
Source/TactixDebug/Private/: FTactixAgentProfiler.cpp  FTactixDecisionRecorder.cpp  FTactixGameplayDebuggerCategory.cpp  FTactixInfluenceRenderer.cpp  FTactixVisualDebugger.cpp  TactixDebugModule.cpp
Source/TactixDebug/Public/: FTactixAgentProfiler.h  FTactixDecisionRecorder.h  FTactixGameplayDebuggerCategory.h  FTactixInfluenceRenderer.h  FTactixVisualDebugger.h  TactixDebug.h
Source/TactixSystems/: TactixSystems.Build.cs
Source/TactixSystems/Private/: TactixSystemsModule.cpp
Source/TactixSystems/Private/GOAP/: FTactixGOAPPlanner.cpp
Source/TactixSystems/Private/HTN/: FTactixHTNPlanner.cpp
Source/TactixSystems/Public/: TactixSystems.h
Source/TactixSystems/Public/Cover/: FTactixCoverPoint.h  FTactixCoverSystem.h
Source/TactixSystems/Public/GOAP/: FTactixGOAPPlanner.h  FTactixWorldState.h  ITactixGOAPAction.h
Source/TactixSystems/Public/HTN/: FTactixHTNPlanner.h  ITactixHTNTask.h
Source/TactixSystems/Public/Spatial/: FTactixInfluenceMap.h
Source/TactixSystems/Public/Squad/: FTactixFormation.h  FTactixSquad.h
Source/TactixSystems/Public/Utility/: FTactixConsideration.h  FTactixUtilitySelector.h  ITactixAction.h  ITactixConsideration.h
Source/TactixUE/: TactixUE.Build.cs
Source/TactixUE/Private/: TactixUEModule.cpp
Source/TactixUE/Private/BehaviorTree/: UTactixBTDecorator_InCover.cpp  UTactixBTDecorator_PlanActive.cpp  UTactixBTService_InfluenceQuery.cpp  UTactixBTTask_ClaimCover.cpp  UTactixBTTask_ExecutePlan.cpp  UTactixBTTask_RunUtility.cpp
Source/TactixUE/Private/Components/: UTactixAgentComponent.cpp
Source/TactixUE/Private/Controller/: ATactixAIController.cpp
Source/TactixUE/Private/DataAssets/: UTactixSquadConfigAsset.cpp  UTactixUtilityAsset.cpp
Source/TactixUE/Private/EQS/: UTactixEQSGenerator_Cover.cpp  UTactixEQSTest_Influence.cpp
Source/TactixUE/Private/Subsystem/: UTactixWorldSubsystem.cpp
Source/TactixUE/Public/: TactixUE.h  TactixUETypes.h
Source/TactixUE/Public/BehaviorTree/: UTactixBTDecorator_InCover.h  UTactixBTDecorator_PlanActive.h  UTactixBTService_InfluenceQuery.h  UTactixBTTask_ClaimCover.h  UTactixBTTask_ExecutePlan.h  (+1 more)
Tests/: CMakeLists.txt
Tests/CoreTests/: TestArena.cpp  TestBlackboard.cpp  TestCurve.cpp  TestEventBus.cpp  TestGrid.cpp  TestHandle.cpp  TestMath.cpp  TestPerceptionMemory.cpp  TestPool.cpp  TestScheduler.cpp
Tests/SystemsTests/: TestCover.cpp  TestGOAP.cpp  TestHTN.cpp  TestInfluence.cpp  TestSquad.cpp  TestUtility.cpp
(+7 files in other folders)
